--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,10 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "Kragostios.sln"
+    "dotnet.defaultSolution": "Kragostios.sln",
+    "[csharp]": {
+        "editor.tabSize": 4,
+        "editor.insertSpaces": true,
+        "editor.formatOnSave": true
+    }
 }
